# kindle-transfer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.node.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop.rs  lib.rs  main.rs
src-tauri/src/converter/: mod.rs
src-tauri/src/device/: mod.rs  usb_detector.rs
src-tauri/src/toc/: mod.rs  toc_optimizer.rs
src-tauri/src/uploader/: kindle_thumbnail.rs  mod.rs  upload_manager.rs  usb_upload.rs
src/components/: brand-mark.tsx  connection-badge.tsx  device-card.tsx  history-list.tsx  progress-bar.tsx  sidebar-nav.tsx  upload-dropzone.tsx
src/data/: mock.ts
src/hooks/: use-desktop-state.ts
src/i18n/: index.ts
src/lib/: desktop-bridge.ts
src/pages/: devices-page.tsx  history-page.tsx  library-page.tsx  upload-page.tsx
src/types/: index.ts
