[package]
name = "kindle-transfer"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Desktop Kindle transfer tool with USB connectivity, built with Rust and Tauri."
authors = ["kimping"]
license = "MIT"
default-run = "kindle-transfer"
build = "build.rs"

[lib]
name = "kindle_transfer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Tauri build integration. Keep the Rust crates and the frontend-side
# Tauri npm packages on the same major version line.
tauri-build = { version = "2", features = [] }

[dependencies]
# Core desktop runtime.
tauri = { version = "2", features = [] }

# Serialization for command payloads, persisted data and UI event messages.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"

# Async runtime for scanning, conversion jobs, upload queue and DB access.
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "net", "io-util"] }
futures = "0.3"

# Error handling and diagnostics.
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Database and identifier utilities.
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

# Device detection: USB enumeration and filesystem mount observation.
rusb = "0.9"
notify = "8.2"

# EPUB / XML / archive processing.
quick-xml = { version = "0.39", features = ["serialize"] }
roxmltree = "0.20"
xmltree = "0.11"
zip = { version = "5.1", default-features = false, features = ["deflate", "time"] }
walkdir = "2.5"
tempfile = "3.23"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
kindling-mobi = "0.14.5"

# Misc utilities used across conversion and upload pipelines.
regex = "1.12"
once_cell = "1.21"
mime_guess = "2.0"
sha2 = "0.10"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# macOS volume and filesystem metadata queries often require Objective-C / CoreFoundation interop.
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows mount path and volume resolution helpers.
windows = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Linux mount and udev-related parsing support will be layered on top of std/process,
# but libc remains useful for some low-level filesystem metadata access.
libc = "0.2"
